--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vuecli",
+  "name": "app",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "melodymateng <370627276@qq.com>",
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
